--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,4 +1,4 @@
-<h3 class="dota">
+{{!--<h3 class="dota">
     I am inside the Home page
 </h3>
 
@@ -7,4 +7,6 @@
     <button>
         {{#link-to "rooms"}}Cool ass{{/link-to}}
     </button>
-</div>
+</div>--}}
+
+{{landing-background}}
