--- a/app/templates/rooms.hbs
+++ b/app/templates/rooms.hbs
@@ -5,7 +5,7 @@
 
 <ul>
     {{#each this.model.rooms as |room|}}
-        <li>{{#link-to 'room' room.id}}{{room.name}} - {{room.id}}{{/link-to}}</li>
+        <li>{{#link-to 'room' room.id}}({{room.id}}) {{room.name}}{{/link-to}}</li>
     {{/each}}
 </ul>
 
