--- a/app/templates/components/landing-background.hbs
+++ b/app/templates/components/landing-background.hbs
@@ -1,4 +1,3 @@
-
-<button {{action "show"}}>
-    SHOW
-</button>
+<div style="margin: 0 auto;">
+    <img src="/assets/images/logo.png" alt="Logo">
+</div>
