--- a/app/templates/components/landing-background.hbs
+++ b/app/templates/components/landing-background.hbs
@@ -1,3 +1,5 @@
 <div style="margin: 0 auto;">
     <img src="/assets/images/logo.png" alt="Logo">
 </div>
+
+<button type="button" class="btn btn-primary btn-lg">Primary</button>
