Landing page completed

--- a/app/templates/components/landing-background.hbs
+++ b/app/templates/components/landing-background.hbs
@@ -1,5 +1,8 @@
-<div style="margin: 0 auto;">
-    <img src="/assets/images/logo.png" alt="Logo">
-</div>
+<main class="landing">
+    <section>
+        <img src="/assets/images/logo.png" alt="Logo" class="img-fluid">
+    </section>
 
-<button type="button" class="btn btn-primary btn-lg">Primary</button>
+    <a class="ui primary big  button" href="/rooms">Show Rooms</a>
+</main>
+
