--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,15 +1,13 @@
-$landingpage-bg: 'https://images.unsplash.com/photo-1505796215109-a97d9dd14561?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80';
-
 body, html {
     padding: 0;
     margin: 0;
 }
 
-.landing-background {
-    /*background: url('https://media-public.canva.com/MADCW1YPW2Q/2/0/thumbnail_large-2.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;*/
+.landing {
+    text-align: center;
+    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
 }
 @import "ember-bootstrap/bootstrap";
