--- a/app/templates/components/landing-background.hbs
+++ b/app/templates/components/landing-background.hbs
@@ -1,8 +1,7 @@
-<main class="landing">
+<main class="landing-page unclickable">
     <section>
         <img src="/assets/images/logo.png" alt="Logo" class="img-fluid">
     </section>
 
-    <a class="ui primary big  button" href="/rooms">Show Rooms</a>
+    {{#link-to 'rooms' class="ui primary big button"}}Rooms{{/link-to}}
 </main>
-
