Added email, capacity inputs, saving before importing datepicker

--- a/app/templates/components/room-details.hbs
+++ b/app/templates/components/room-details.hbs
@@ -32,9 +32,18 @@
 
     <div class="col-12 col-md-6">
         <div class="container">
-            <div class="input-field col s12">
-                <input placeholder="Email Address" id="email" type="email" class="validate">
-                <label for="first_name">Email Address</label>
+            <div class="form-group col-12">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="email-info" placeholder="Enter email">
+                <small id="email-info" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+
+            <div class="col-12">
+                Capacity: <input type="number" name="quantity" min="1" max="{{room.capacity}}" style="width: 80px;">
+            </div>
+
+            <div class="col-12" style="padding: 10px;">
+                <button class="ui primary button">Book</button>
             </div>
         </div>
     </div>
