--- a/app/templates/room.hbs
+++ b/app/templates/room.hbs
@@ -1,6 +1,6 @@
 <main class="container-fluid">
     {{#link-to 'rooms'}}Back{{/link-to}}
-    {{room-details room=this.model.room}}
+    {{room-details room=this.model.room occupied_days=this.model.dog}}
 </main>
 
 
