--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,12 @@ $large: 1200px;
     }
 }
 
+@mixin mobile {
+    @media (max-width: #{767px}) {
+        @content;
+    }
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -88,4 +94,11 @@ $large: 1200px;
         }
     }
 }
+
+#booking-form {
+    @include mobile {
+        padding-top: 20px;
+    }
+}
+
 @import "ember-bootstrap/bootstrap";
