Prepare for Unit test

--- a/app/templates/components/room-details.hbs
+++ b/app/templates/components/room-details.hbs
@@ -1,4 +1,3 @@
-
 <div class="row" id="room-standalone">
     <div class="col-12 col-md-6">
         <div class="ui card">
@@ -50,7 +49,8 @@
 
                 <div class="form-group col-6" >
                     <label for="endDate">End Date</label>
-                    <input id="endDate" type="text" class="form-control date-pickr">
+                    <input id="endDate" type="text" class="form-control date-pickr" aria-describedby="end-info">
+                    <small id="end-info" class="form-text text-muted">Maximum days per booking - 7 days from Start Day</small>
                 </div>
             </div>
 
